packages/gatsby-theme-carbon/src/components/Header/Header.module.scss
@import '~carbon-components/scss/globals/scss/layout';

.header button {
  display: flex;
  justify-content: center;
  align-items: center;
}

header.header {
  transition: top $duration--fast-02;
  background-color: $ui-05;
  border-bottom: 1px solid $inverse-02;
  z-index: z('floating');
}

.header :global(.bx--header__action--menu) {
  border: none;
  border-right: 2px solid transparent !important;
  top: 0.5px;
  position: relative;
  flex-shrink: 0;
  &:focus {
    border: 2px solid $inverse-01;
    border-right: 2px solid $inverse-01 !important;
  }
  @include carbon--breakpoint('lg') {
    display: none;
  }
}

.header :global(.bx--header__action--menu.bx--header__action--active) {
  background-color: $ui-05;
  border-right: 1px solid $inverse-02 !important;
  @include carbon--breakpoint('lg') {
    display: none;
  }
}

.header :global(.bx--header__name):focus {
  box-shadow: none;
}

.headerName span {
  font-weight: 600;
}

.header .skip-to-content:focus {
  border: 2px solid $carbon--white-0;
  margin: 0;
}

.headerName {
  @include carbon--type-style('body-short-02');
  transition: opacity $duration--fast-02 $carbon--standard-easing;
  color: $inverse-01;
  text-decoration: none;
  position: absolute;
  left: 3rem;
  white-space: nowrap;
  padding: 0 $spacing-05;
  height: 100%;
  display: flex;
  align-items: center;
  &:focus {
    outline: 2px solid $inverse-01;
    outline-offset: -2px;
  }

  @include carbon--breakpoint('lg') {
    left: 0;
  }
}

.header-button {
  flex-shrink: 0;
  transition: background-color $duration--fast-02 $carbon--standard-easing;
}

// Switcher button, extra specificity to override Carbon styles
.header .header-button.switcher-button {
  background-color: $ui-05;
  position: relative;
  border: none;
  border-color: $ui-05;
  border-top: 1px solid $ui-05;
  border-bottom: 1px solid $inverse-02;
  &:focus {
    border-color: $inverse-02;
    outline: 2px solid $inverse-01;
    outline-offset: -2px;
  }
  &:active {
    background-color: #3d3d3d;
    border-left: 1px solid $ui-05;
    border-right: 1px solid $ui-05;
  }
}

.header-button.switcher-button.switcher-button--open {
  border-bottom: 1px solid $ui-05;
  background-color: $ui-05;
  &:active {
    border-left: 1px solid $inverse-02;
  }
}

.header-button.switcher-button--open:not(:focus) {
  border: 1px solid $ui-05;
  border-left: 1px solid $inverse-02;
}

